--- a/index.html
+++ b/index.html
@@ -306,28 +306,28 @@
         <div class="col-md-3 col-xs-6">
           <div class="single-number text-center">
             <i class="fa fa-clock-o"></i>
-            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">81</h2>
+            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">118</h2>
             <p>Ore di pratica</p>
           </div>
         </div>
         <div class="col-md-3 col-xs-6">
           <div class="single-number text-center">
             <i class="fa fa-code"></i>
-            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">50</h2>
+            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">90</h2>
             <p>Giorni di studio</p>
           </div>
         </div>
         <div class="col-md-3 col-xs-6">
           <div class="single-number text-center">
             <i class="fa fa-user"></i>
-            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">2345</h2>
+            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">4074</h2>
             <p>Punti personali </p>
           </div>
         </div>
         <div class="col-md-3 col-xs-6">
           <div class="single-number text-center">
             <i class="fa fa-trophy"></i>
-            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">457</h2>
+            <h2 class="numbers animate__animated animate__heartBeat animate__delay-5s animate__slower animate__infinite">280</h2>
             <p>Posizione in classifica</p>
           </div>
         </div>
@@ -460,6 +460,118 @@
                   </div>
 
                 </div>
+
+                <div class="col-md-6 col-sm-6 col-xs-12 no-pad">
+                  <div id="inline-popups-3" class="port-box">
+                    <a href="#test-popup-3" data-effect="mfp-zoom-out">
+                      <div class="hovereffect">
+
+                        <img src="images/portfolio/Progetto html-css-2.png" alt="portfolio image" class="img-responsive">
+                        <div class="overlay">
+                          <h2>SITO PERSONALE</h2>
+                          <p>L’obiettivo del sito è senza dubbio quello di farmi notare da aziende partner di start2impact dato che i miei primi progetti concreti come sviluppatore e come UX/UI designer...
+
+                          </p>
+                        </div>
+
+                      </div>
+                    </a>
+                  </div>
+                  <div id="test-popup-3" class="white-popup mfp-with-anim mfp-hide">
+                    <div class="row">
+                      <div class="col-md-7 col-xs-12">
+                        <div class="por-img">
+                          <img src="images/portfolio/Progetto html-css.png" alt="portfolio image" class="img-responsive">
+                        </div>
+                      </div>
+                      <div class="col-md-5 col-xs-12">
+                        <div class="por-text">
+                          <h2>Progetto sito HTML-CSS</h2>
+                          <p>L’obiettivo del sito è senza dubbio quello di farmi notare da aziende partner di start2impact dato che i miei primi progetti concreti come sviluppatore e come UX/UI designer li sto realizzando grazie a quello che sto studiando in piattaforma. Proprio per questo ho inserito i progressi personali in S2I e i progetti realizzati per il Copy e per la Grafica, oltre a comunicare le competenze in più maturate come autonomo.
+
+                          </p>
+                          <div class="por-text-details">
+                            <div class="row">
+                              <div class="col-xs-4">
+                                <p>Tipo:</p>
+                                <p>Nome:</p>
+                                <p>Completato:</p>
+                                <p>Link:</p>
+                              </div>
+                              <div class="col-xs-offset-1 col-xs-7">
+                                <p>Progetto html css</p>
+                                <p>Sito personale</p>
+                                <p>05/08/2020</p>
+                                <p><a href="https://docs.google.com/presentation/d/1YYg-FA4-GPlLyhE2wfqSUGqLvkbpeJ0lzkQJBssq0jM/edit?usp=sharing" target="_blank">Progetto html css</a></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+
+                <div class="col-md-6 col-sm-6 col-xs-12 no-pad">
+
+                  <div id="inline-popups-4">
+                    <a href="#test-popup-4" data-effect="mfp-zoom-out">
+                      <div class="hovereffect">
+
+                        <img src="images/portfolio/Progetto discovery-2.png" alt="portfolio image" class="img-responsive">
+                        <div class="overlay">
+                          <h2>DISCOVERY</h2>
+                          <p>In questo progetto abbiamo lavorato in team analizzato il sito di un ristorante a km0 per poter individuare l'utente ideale e i problemi legati alla user experience...</p>
+                        </div>
+
+                      </div>
+                    </a>
+                  </div>
+                  <div id="test-popup-4" class="white-popup mfp-with-anim mfp-hide">
+                    <div class="row">
+
+                      <div class="col-md-7">
+                        <div class="por-img">
+                          <img src="images/portfolio/Progetto discovery.png" alt="portfolio image" class="img-responsive">
+                        </div>
+                      </div>
+                      <div class="col-md-5">
+                        <div class="por-text">
+                          <h2>Discovery</h2>
+                          <p>In questo progetto abbiamo lavorato in team analizzato il sito di un ristorante a km0 per poter individuare l'utente ideale e i problemi legati alla user experience.</p>
+                          <p>In base ai dati emersi dalle risposte
+                            degli utenti e dall'analisi dei
+                            competitors, i nostri obiettivi del
+                            progetto sono:
+                          </p>
+                          <p>Eliminare ezioni inutili</p>
+                          <p>Migliorare la user journey</p>
+                          <p>Migliorare la UX</p>
+                          <div class="por-text-details">
+                            <div class="row">
+                              <div class="col-xs-4">
+                                <p>Tipo:</p>
+                                <p>Nome:</p>
+                                <p>Completato:</p>
+                                <p>Link:</p>
+                              </div>
+                              <div class="col-xs-offset-1 col-xs-7">
+                                <p>Progetto Discovery</p>
+                                <p>Al Kilometro Zero</p>
+                                <p>05/09/2020</p>
+                                <p><a href="https://drive.google.com/file/d/1nqSkF2a82vRCAusDf8fa15O4-uM9HYdQ/view?usp=sharing" target="_blank">Progetto Discovery</a></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+
               </div>
             </div>
           </div>
