--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="about-text-left">
             <h2>Michele Peluso</h2>
             <h3>UX/UI Design Student</h3>
-            <p>Possiedo un <b>background tecnico</b> grazie alla formazione scolastica da perito elettronico che ho messo poi in pratica nell'azienda di mio padre, che un anno e mezzo fa ho lasciato per seguire <b>la mia passione nel digitale.</b> <br>Con l'esperienza lavorativa ho sviluppato un'alta capacità di ricerca di soluzioni e problem solving. Dopo svariate esperienze da autonomo nel digitale ho capito quale sarà la mia strada: <b>diventare uno sviluppatore con competenze UX/UI</b></p></br>
+            <p>Possiedo un <b>background tecnico</b> grazie alla formazione scolastica da perito elettronico che ho messo poi in pratica nell'azienda di mio padre, che un anno e mezzo fa ho lasciato per seguire <b>la mia passione nel digitale.</b> <br>Con l'esperienza lavorativa ho sviluppato un'alta capacità di ricerca di soluzioni e problem solving. Dopo svariate esperienze da autonomo nel digitale ho capito quale sarà la mia strada: <b>diventare uno UX/UI Designer con competenze da Front-end developer</b></p></br>
           </div>
         </div>
 
